some errors are there .the video is loaded but the face markings not visible,coding completed

--- a/index.html
+++ b/index.html
@@ -11,5 +11,19 @@
 </head>
 <body>
     <video id="video" width="720" height="560" autoplay muted></video>
+    <style>
+        canvas{
+            position: absolute;
+        }
+        body{
+            padding: 0px;
+            margin: 0px;
+            width: 100vw;
+            height: 100vh;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+        }
+    </style>
 </body>
 </html>
